@@ -1,5 +1,13 @@
 2019-10-10  Jan Hubicka  <hubicka@ucw.cz>
 
+	* ipa-reference.c: Do not include splay-tree.h
+	(reference_vars_to_consider): Turn to hash map.
+	(get_static_name, ipa_init, analyze_function, propagate,
+	stream_out_bitmap, ipa_reference_write_optimization_summary,
+	ipa_reference_write_optimization_summary): Update.
+
+2019-10-10  Jan Hubicka  <hubicka@ucw.cz>
+
 	* ipa-reference.c (propagate): Fix releasing of IPA summaries.
 
 2019-10-10  Iain Sandoe  <iain@sandoe.co.uk>
